[gd_scene load_steps=5 format=3 uid="uid://cggbs7ayhuwjh"]

[ext_resource type="Script" path="res://bullet_enemy.gd" id="1_y1ut2"]
[ext_resource type="Texture2D" uid="uid://kpcp8aa5tdxv" path="res://assets/laser_green.png" id="2_4nu5w"]
[ext_resource type="AudioStream" uid="uid://dbtpiyv4g0qyt" path="res://assets/sounds/enemy_laser.wav" id="3_w8npy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fd4wk"]
radius = 3.0
height = 48.0

[node name="EnemyBullet" type="Area2D" groups=["bullet_enemy"]]
script = ExtResource("1_y1ut2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4nu5w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_fd4wk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w8npy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
